--- a/package.json
+++ b/package.json
@@ -24,19 +24,21 @@
   },
   "homepage": "https://github.com/Aryandotgit/EthOdyssey_2021#readme",
   "dependencies": {
-    "@truffle/hdwallet-provider": "^1.0.37",
+    "@truffle/hdwallet-provider": "^1.4.2",
+    "@trufflesuite/web3-provider-engine": "^14.0.7",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^5.0.2",
     "crypto-browserify": "^3.12.0",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^4.0.3",
     "readable-stream": "^1.0.33",
     "request": "^2.79.0",
     "stream-browserify": "^1.0.0",
     "truffle-contract": "^4.0.31",
     "web3": "^1.5.0",
+    "web3-core-helpers": "^1.5.0",
     "web3-eth": "^1.5.0",
     "webpack": "^4.44.2"
   },
